jss-compiler/tests/parser/invalid/brace_error_recovery.jss
function void main() {
    let int a = 10;
    { let int c = }
    let int d = 30;
}
